# Test_repo

./: CMakeLists.txt
.github/workflows/: ci.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/simple_pubsub/lib/simple_pubsub/: publisher_node  subscriber_node  test_simple_pubsub
install/simple_pubsub/share/simple_pubsub/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
log/: latest_build  latest_test  latest_test-result
src/: publisher_node.cpp  subscriber_node.cpp  test_simple_pubsub.cpp
test/: test_simple_pubsub.cpp
